--- a/site.html
+++ b/site.html
@@ -78,7 +78,7 @@
                 YENİ MÜZİK KLİBİM YAYINDA !
             </b>
             <pre></pre><pre></pre>
-            <iframe width:100%; height="315" src="https://www.youtube.com/embed/w3dmx3H-z9Y?si=tQirgP0o_BpOIKX_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/iZxY-cLEt0w?si=PQrAaw5gaAuULKqH&amp;start=95" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <pre></pre><pre></pre>
             <iframe style="border-radius:12px" width:100%; height="315" src="https://www.youtube.com/embed/q7Ir6xDP1wM?si=eNh3_gds66YECwR8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <pre></pre>
