--- a/site.html
+++ b/site.html
@@ -72,7 +72,7 @@
         </nav>
         <pre></pre><pre></pre>
         <main>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0BjNpf7opB2KjU6NSJTKJP?utm_source=generator&theme=0" width:100%; height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/artist/57UZ5W59ah1E6Mc8EFh1g2?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <pre></pre><pre></pre>
             <b>
                 YENİ MÜZİK KLİBİM YAYINDA !
